--- a/{{ cookiecutter.project_repo }}/slides.css
+++ b/{{ cookiecutter.project_repo }}/slides.css
@@ -2,14 +2,27 @@
 @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
 @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
 
-body {
-    font-family: 'Droid Serif';
+html {
+    font-size: 100%;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
+body {
+    margin: 0;	
+    font-family: 'Droid Serif';
+    font-size: 32px;
+    line-height: 2;
+    color: #555555;
+    background-color: #FFFFFF;
+}
+
+
 h1, h2, h3 {
     font-family: 'Yanone Kaffeesatz';
     font-weight: 400;
     margin-bottom: 0;
 }
+
 .remark-slide-content h1 {
     font-size: 3em;
 }
@@ -19,6 +32,15 @@ h1, h2, h3 {
 .remark-slide-content h3 {
     font-size: 1.6em;
 }
+
+blockquote {
+    border-left: 5px solid #cccccc;
+    padding-left: 1em;
+    margin: 1em -1em;
+    font-style: italic;
+    color: #999999;
+}
+
 .footnote {
     position: absolute;
     bottom: 3em;
@@ -36,6 +58,20 @@ a, a > code {
     color: rgb(249, 38, 114);
     text-decoration: none;
 }
+
+a:hover, a:focus {
+    color: #00989e;
+    text-decoration: underline;
+}
+
+a:focus {
+    outline: 3px solid #00989e;
+    outline-offset: 0;
+    background-color: #00989e;
+    color: #FFF;
+    text-decoration: none;
+}
+
 code {
     background: #e7e8e2;
     border-radius: 5px;
@@ -91,3 +127,30 @@ code {
 }
 
 /* Slide-specific styling */
+.remark-slide-content:after {
+    content: "";
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    height: 40px;
+    width: 120px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-image: url('data:image/png;base64,<your-base-64-encoded-string>'); 
+}
+
+/* Print styling */
+@page {
+  size: 1210px 681px;
+  margin: 0;
+}
+
+@media print {
+  .remark-slide-scaler {
+    width: 100% !important;
+    height: 100% !important;
+    transform: scale(1) !important;
+    top: 0 !important;
+    left: 0 !important;
+  }
+}
